FIX: Overflow showing horizontal scroll thumb

--- a/src/components/Content/styles.module.css
+++ b/src/components/Content/styles.module.css
@@ -1,8 +1,8 @@
 /*Mobile*/
 @media (max-width: 500px) {
     .div {
-        height: 100%;
         width: 100%;
+        padding-top: 100px;
     }
 
     .cardsDiv {
@@ -20,8 +20,8 @@
 /*Browser*/
 @media (min-width: 501px) {
     .div {
-        height: 100%;
         width: 100%;
+        padding-top: 100px;
     }
 
     .cardsDiv {
