--- a/src/pages/styles.module.css
+++ b/src/pages/styles.module.css
@@ -1,31 +1,42 @@
 @media (max-width: 500px) {
     .background {
-        width: 100vw;
+        width: 100%;
+        height: 100%;
         background-color: #1e1e2e;
 
         overflow: hidden;
     }
 
     .div {
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
         width: auto;
         height: calc(100vh - 92px);
+
         overflow-y: scroll;
     }
 }
 
 @media (min-width: 501px) {
     .background {
-        width: 100vw;
+        width: 100%;
+        height: 100%;
         
         padding: 7px;
+        
         background-color: #1e1e2e;
 
         overflow: hidden;
     }
 
     .div {
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
         width: auto;
-        height: calc(100vh - 92px); /*calc(100vh - Navbar Height)*/
+        height: calc(100vh - 95px);
+
         overflow-y: scroll;
     }
 }
