--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -9,8 +9,5 @@
 }
 
 body {
-  width: 100%;
-  height: 100vh;
-
   overflow: hidden;
 }
